--- a/public/package.json
+++ b/public/package.json
@@ -2,7 +2,8 @@
 	"name": "TTGBot",
 	"version": "0.0.1",
 	"private": true,
-	"dependencies": {},
+	"dependencies": {
+	},
 	"devDependencies": {
 		"grunt": "~0.4.1",
 		"grunt-contrib-less": "~0.11.0",
@@ -14,14 +15,9 @@
 		"grunt-contrib-uglify": "^0.2.7",
 		"grunt-ngmin": "0.0.2",
 		"grunt-html2js": "^0.1.9",
-		"grunt-contrib-coffee": "^0.7.0",
-		"grunt-coffeelint": "~0.0.10",
 		"grunt-conventional-changelog": "^0.1.2",
 		"grunt-bump": "0.0.6",
-		"karma-firefox-launcher": "^0.1.3",
-		"karma-jasmine": "^0.1.5",
-		"grunt-karma": "^0.8.2",
-		"karma-coffee-preprocessor": "^0.2.1",
-		"karma": "^0.12.9"
+		"grunt-rsync": "~0.6.1",
+		"express": "3.x"
 	}
 }
