--- a/public/package.json
+++ b/public/package.json
@@ -19,6 +19,7 @@
     "grunt-conventional-changelog": "^0.1.2",
     "grunt-bump": "0.0.6",
     "grunt-rsync": "~0.6.1",
-    "express": "3.x"
+    "express": "3.x",
+    "socket.io": "0.9.x"
   }
 }
