--- a/robot/package.json
+++ b/robot/package.json
@@ -1,13 +1,16 @@
 {
-	"name": "TTGBot",
-	"description": "TTGBot node.js app",
-	"version": "0.0.1",
-	"private": true,
-	"dependencies": {
-		"socket.io": "0.9.x",
-		"bonescript": "0.2.x"
-	},
-	"scripts": {
-		"start": "forever --debug --verbose --watch app.js"
-	}
+  "name": "TTGBot",
+  "description": "TTGBot node.js app",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "socket.io": "0.9.x",
+    "bonescript": "0.2.x",
+    "i2c": "0.1.x",
+    "ioctl": "0.0.7",
+    "lsm303": "~0.1.0"
+  },
+  "scripts": {
+    "start": "forever --debug --verbose --watch app.js"
+  }
 }
