--- a/public/package.json
+++ b/public/package.json
@@ -2,24 +2,30 @@
   "name": "TTGBot",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "install": "bower install",
+    "start": "node httpServer.js",
+    "build": "grunt"
+  },
   "dependencies": {
     "grunt-shell": "~1.1.1"
   },
   "devDependencies": {
+    "express": "3.x",
     "grunt": "~0.4.1",
-    "grunt-contrib-less": "~0.11.0",
+    "grunt-bump": "0.0.6",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.4.1",
+    "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-copy": "^0.4.1",
     "grunt-contrib-jshint": "^0.4.3",
-    "grunt-contrib-concat": "^0.3.0",
-    "grunt-contrib-watch": "^0.4.4",
+    "grunt-contrib-less": "~0.11.0",
     "grunt-contrib-uglify": "^0.2.7",
-    "grunt-ngmin": "0.0.2",
-    "grunt-html2js": "^0.1.9",
+    "grunt-contrib-watch": "^0.4.4",
     "grunt-conventional-changelog": "^0.1.2",
-    "grunt-bump": "0.0.6",
+    "grunt-html2js": "^0.1.9",
+    "grunt-ngmin": "0.0.2",
     "grunt-rsync": "~0.6.1",
-    "express": "3.x",
     "socket.io": "0.9.x"
   }
 }
