--- a/public2/package.json
+++ b/public2/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm run build && node lib/httpServer.js",
     "build": "npm run browserify & npm run less",
-    "watch": "npm run browserify:watch & npm run less:watch",
+    "watch": "npm run browserify:watch & npm run less:watch & nodemon lib/httpServer.js",
     "prebuild": "mkdir -p build && cp lib/index.html build",
     "prewatch": "mkdir -p build && cp lib/index.html build",
     "browserify": "browserify -t reactify lib/index.js -o build/bundle.js --full-paths",
@@ -14,6 +14,7 @@
     "less:watch": "watch \"npm run less\" lib/less",
     "disc": "discify build/bundle.js > build/disc.html",
     "rsync": "node ./bin/rsync.js",
+    "rsync:watch": "watch \"npm run rsync\" ./../robot",
     "ssh": "node ./bin/ssh.js"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "events": "^1.0.2",
     "express": "3.x",
     "flux": "^2.0.1",
+    "nodemon": "^1.3.7",
     "object-assign": "^2.0.0",
     "react": "~0.12.2",
     "shelljs": "^0.3.0",
