--- a/robot/package.json
+++ b/robot/package.json
@@ -4,13 +4,16 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "socket.io": "0.9.x",
+    "socket.io": "^1.3.3",
     "bonescript": "0.2.x",
     "i2c": "0.1.x",
-    "ioctl": "0.0.7",
-    "lsm303": "~0.1.0"
+    "lsm303": "~0.1.0",
+    "nodemon": "^1.3.7",
+    "usage": "^0.5.0",
+    "object-assign": "^2.0.0"
   },
+  "main": "app.js",
   "scripts": {
-    "start": "forever --debug --verbose --watch app.js"
+    "start": "nodemon"
   }
 }
