--- a/public2/package.json
+++ b/public2/package.json
@@ -13,8 +13,9 @@
     "less": "lessc lib/less/main.less > build/main.css",
     "less:watch": "watch \"npm run less\" lib/less",
     "disc": "discify build/bundle.js > build/disc.html",
+    "sshfs": "node ./bin/sshfs.js",
     "rsync": "node ./bin/rsync.js",
-    "rsync:watch": "watch \"npm run rsync\" ./../robot",
+    "rsync:watch": "watch \"npm run rsync\" ./../robot & watch \"npm run rsync\" ./../repos",
     "ssh": "node ./bin/ssh.js"
   },
   "devDependencies": {
@@ -33,6 +34,8 @@
     "object-assign": "^2.0.0",
     "react": "~0.12.2",
     "shelljs": "^0.3.0",
-    "socket.io": "0.9.x"
+    "socket.io": "0.9.x",
+    "less": "~2.4.0",
+    "local-storage": "~1.3.1"
   }
 }
