--- a/robot/package.json
+++ b/robot/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "socket.io": "^1.3.3",
     "bonescript": "0.2.x",
+    "event-loop-lag": "^1.1.0",
     "i2c": "0.1.x",
     "lsm303": "~0.1.0",
     "nodemon": "^1.3.7",
-    "usage": "^0.5.0",
-    "object-assign": "^2.0.0"
+    "object-assign": "^2.0.0",
+    "socket.io": "^1.3.3",
+    "usage": "^0.5.0"
   },
   "main": "app.js",
   "scripts": {
