--- a/robot/package.json
+++ b/robot/package.json
@@ -11,10 +11,14 @@
     "nodemon": "^1.3.7",
     "object-assign": "^2.0.0",
     "socket.io": "^1.3.3",
-    "usage": "^0.5.0"
+    "usage": "^0.5.0",
+    "prussdrv": "^0.0.2"
   },
   "main": "app.js",
   "scripts": {
-    "start": "nodemon"
+    "build": "npm run build-overlay && npm run build-pru",
+    "buildoverlay": "(cd overlay && ./build)",
+    "buildpru": "(cd pru0 && ./build)",
+    "start": "node app.js"
   }
 }
