--- a/public2/package.json
+++ b/public2/package.json
@@ -16,7 +16,7 @@
     "sshfs": "node ./bin/sshfs.js",
     "rsync": "node ./bin/rsync.js",
     "rsyncrepos": "node ./bin/rsync_repos.js",
-    "rsync:watch": "watch \"npm run rsync\" ./../robot & watch \"npm run rsyncrepos\" ./../repos",
+    "rsync:watch": "watch \"npm run rsync\" ./../robot",
     "ssh": "node ./bin/ssh.js"
   },
   "devDependencies": {
@@ -31,12 +31,15 @@
     "events": "^1.0.2",
     "express": "3.x",
     "flux": "^2.0.1",
+    "less": "~2.4.0",
+    "local-storage": "~1.3.1",
     "nodemon": "^1.3.7",
     "object-assign": "^2.0.0",
+    "paralleljs": "^0.2.1",
+    "promise": "^6.1.0",
     "react": "~0.12.2",
     "shelljs": "^0.3.0",
-    "socket.io": "0.9.x",
-    "less": "~2.4.0",
-    "local-storage": "~1.3.1"
+    "socket.io": "^1.3.3",
+    "socket.io-client": "^1.3.5"
   }
 }
