--- a/robot/package.json
+++ b/robot/package.json
@@ -7,12 +7,13 @@
     "bonescript": "0.2.x",
     "event-loop-lag": "^1.1.0",
     "i2c": "0.1.x",
-    "lsm303": "~0.1.0",
+    "lsm303": "^0.1.0",
     "nodemon": "^1.3.7",
     "object-assign": "^2.0.0",
     "socket.io": "^1.3.3",
     "usage": "^0.5.0",
-    "prussdrv": "^0.0.2"
+    "prussdrv": "^0.0.2",
+    "serialport": "^1.5.0"
   },
   "main": "app.js",
   "scripts": {
