--- a/public2/package.json
+++ b/public2/package.json
@@ -8,15 +8,15 @@
     "watch": "npm run browserify:watch & npm run less:watch & nodemon lib/httpServer.js",
     "prebuild": "mkdir -p build && cp lib/index.html build",
     "prewatch": "mkdir -p build && cp lib/index.html build",
-    "browserify": "browserify -t reactify lib/index.js -o build/bundle.js --full-paths",
-    "browserify:watch": "watchify -t reactify lib/index.js -o build/bundle.js --full-paths -v",
+    "browserify": "browserify -t reactify lib/index.js -o build/bundle.js --full-paths -d",
+    "browserify:watch": "watchify -t reactify lib/index.js -o build/bundle.js --full-paths -v -d",
     "less": "lessc lib/less/main.less > build/main.css",
     "less:watch": "watch \"npm run less\" lib/less",
     "disc": "discify build/bundle.js > build/disc.html",
     "sshfs": "node ./bin/sshfs.js",
     "rsync": "node ./bin/rsync.js",
     "rsyncrepos": "node ./bin/rsync_repos.js",
-    "rsync:watch": "watch \"npm run rsync\" ./../robot",
+    "rsync:watch": "node ./bin/rsync.js && gaze \"node ./bin/rsync.js\" \"./../robot/**/*\"",
     "ssh": "node ./bin/ssh.js"
   },
   "devDependencies": {
@@ -31,6 +31,7 @@
     "events": "^1.0.2",
     "express": "3.x",
     "flux": "^2.0.1",
+    "gaze-cli": "^0.2.0",
     "less": "~2.4.0",
     "local-storage": "~1.3.1",
     "nodemon": "^1.3.7",
