--- a/robot/package.json
+++ b/robot/package.json
@@ -11,6 +11,7 @@
     "nodemon": "^1.3.7",
     "object-assign": "^2.0.0",
     "socket.io": "^1.3.3",
+    "socket.io-client": "^1.3.5",
     "usage": "^0.5.0",
     "prussdrv": "^0.0.2",
     "serialport": "^1.5.0"
