Many changes to Localization and AQ data
Web interface:

- Air quality component: live-updating graph of data and table of readings color-coded by AQI
- Estimated position component: trail starts at the default position, not 0,0, to remove extra line
- Lidar component: Now displays landmark range, estimated and calculated position markers, known landmarks, calculated landmarks
    - This component is now too large, should be broken up into several smaller ones
- Map cursor position component: removed landmark range etc., these were here for simulating it in software based on the mouse position
    - Should probably be a flag to switch between simulation and actual data, or maybe do it based on whether we're using the socket.io mock
- Lidar reading component: now updates because it can get new data, before readings were kept for a while so updating was turned off
- Map expanded to 150cm instead of 140cm
- Added actual position, air quality, landmarks stores

Robot:

- now automatically kills jekyll service and exports our custom dto, these must be done each boot. Exporting a dto should be possible in the uEnv file but doesn't work for this specific one for some reason.
- Added configuration file with basic static robot configuration, currently that's just the initial position
- Updated map fixture to reflect reality
- LCD can now display one large string that wraps, this is more performant and easier to read but less cool looking
- lidar: Put back all the changes made when testing the crashing issue
- lidar: now splicing the array in the correct location, no longer getting the invalid data message constantly and it works properly. I believe this bug was introduced when switching from a buffer to an array.
- pru: export an actual store, send data over socket.io, use numerical indexes instead of strings, don't log as much
- wifi: never use the asu_encrypted wifi network, it's supremely laggy
- added actual position store based on algorithm described on drive
- estimate

--- a/robot/overlay/TTG-PRU0.dts
+++ b/robot/overlay/TTG-PRU0.dts
@@ -19,15 +19,15 @@
 
    /* This overlay uses the following resources */
    exclusive-use =
-         "P9.27", "P9.28", "pru0";
+         "P9.27", "pru0";
 
    fragment@0 {
       target = <&am33xx_pinmux>;
       __overlay__ {
          pru_pru_pins: pinmux_pru_pru_pins {   // The PRU pin modes
             pinctrl-single,pins = <
-               0x1a4 0x05  // P9_27 pr1_pru0_pru_r30_5, MODE5 | OUTPUT | PRU
-               0x19c 0x26  // P9_28 pr1_pru0_pru_r31_3, MODE6 | INPUT | PRU
+               //0x1a4 0x05  // P9_27 pr1_pru0_pru_r30_5, MODE5 | OUTPUT | PRU
+               0x1a4 0x26  // P9_27 pr1_pru0_pru_r31_5, MODE6 | INPUT | PRU
             >;
          };
       };
