--- a/public2/package.json
+++ b/public2/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "bootstrap": "~3.1.0",
+    "chart.js": "^1.0.2",
     "events": "^1.0.2",
     "express": "3.x",
     "flux": "^2.0.1",
